--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -337,10 +337,12 @@ ul.list {
     }
 }
 
+// Breadcrumb
 .breadcrumb {
     gap: .5rem;
     color: $black-text;
 }
+
 .breadcrumb-link {
     color: $paragraph;
 
