--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -360,6 +360,9 @@ ul.list {
 }
 
 input {
+    &[type="email"],
+    &[type="tel"],
+    &[type="password"],
     &[type="text"],
     &[type="search"] {
         border: 1px solid $primary;
@@ -510,6 +513,10 @@ footer {
     /*--Utilities--*/
     .section-heading {
         @include font-primary($w: 700, $s: 2rem, $l: 2.75rem);
+
+        &-sm {
+            @include font-primary($w: 700, $s: 1.5rem, $l: 2rem);
+        }
     }
 
     .section-with-bg {
