--- a/assets/scss/align-section.scss
+++ b/assets/scss/align-section.scss
@@ -42,5 +42,15 @@
     &::before {
       width: 38vw;
     }
+
+    &-width-large {
+      width: 53vw;
+    }
+    &-border-all {
+      border-radius: 15px;
+    }
+    &-shadow {
+      filter: drop-shadow(0px 0px 30px rgba(0, 0, 0, 0.15));
+    }
   }
 }
