--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2,8 +2,6 @@
 @import './font.scss';
 @import './timeline.scss';
 @import './header.scss';
-
-
 @mixin card-style {
     background-color: $dark-text;
     border-radius: 20px;
@@ -40,7 +38,6 @@ img {
 ul.list {
     list-style: none;
     padding: 0;
-
     li {
         background: url('../img/check.svg') no-repeat left top 3px;
         background-size: 1.25rem;
@@ -80,12 +77,12 @@ ul.list {
 .text-primary {
     color: $primary !important;
 }
+
 // Button
 .btn-primary {
     background-color: $primary;
     border-color: $primary;
     @include font-primary($w: 600, $s: 1rem, $l: 1.5rem);
-
     &:hover {
         background-color: $primary-hover;
         border-color: $primary-hover;
@@ -96,7 +93,6 @@ ul.list {
 .btn-outline-primary {
     border-color: $primary;
     color: $primary;
-
     &:hover {
         background-color: $primary-hover;
         border-color: $primary-hover;
@@ -113,7 +109,6 @@ ul.list {
 .navbar-light .navbar-toggler {
     border: 0;
     padding: 0;
-
     &:focus {
         outline: none;
         border: 0;
@@ -129,9 +124,7 @@ ul.list {
     img {
         object-fit: cover;
     }
-
     position: relative;
-    
     @include mobile-style {
         &::before {
             content: "";
@@ -141,12 +134,10 @@ ul.list {
             position: absolute;
             z-index: 1;
         }
-
         .hero-header-content {
             h2 {
                 @include font-primary($w: 800, $s: 1.75rem, $l: 2rem);
             }
-
             p {
                 color: black;
             }
@@ -154,10 +145,11 @@ ul.list {
     }
 }
 
+
 /*--Utilities--*/
+
 .section-heading {
     @include font-primary($w: 700, $s: 1.5rem, $l: 2rem);
-
     &.h3 {
         @include font-primary($w: 700, $s: 1.25rem, $l: 1.85rem);
     }
@@ -167,13 +159,10 @@ ul.list {
     &-item {
         @include card-style;
         box-shadow: 0px 0px 30px $primary-shadow;
-
         display: flex;
         flex-direction: column;
         justify-content: center;
         gap: 24px;
-
-
         &,
         .card-icon,
         .card-direction img,
@@ -181,52 +170,43 @@ ul.list {
         .card-content span {
             transition: all .25s ease-in-out;
         }
-        
         .card-icon {
             filter: none;
         }
-
         .card-direction img {
             position: relative;
             left: 0;
         }
-
         .card-content {
             h5 {
                 color: $heading-light;
             }
-
             span {
                 color: $paragraph;
             }
         }
-
         &:hover {
             background-color: $primary;
-            
             .card-icon {
                 filter: brightness(0) invert(1);
             }
-
             .card-content {
-                h5, span {
+                h5,
+                span {
                     color: $text-hover;
                 }
             }
-
             .card-direction img {
                 left: .25rem;
                 filter: brightness(0) invert(1);
             }
         }
     }
-
     &-title {
         @include font-primary($w: 600, $s: 1rem, $l: 1.5rem);
         color: $title;
         transition: all .25s ease-in-out;
     }
-
     &-link {
         color: $primary;
         text-decoration: none;
@@ -234,12 +214,10 @@ ul.list {
         display: flex;
         align-items: center;
         left: 0;
-
         &,
         &::after {
             transition: all .25s ease-in-out;
         }
-
         &::after {
             content: "";
             background: url('../img/arrow-right.svg') no-repeat center center;
@@ -249,23 +227,19 @@ ul.list {
             background-size: contain;
             margin-left: 10px;
         }
-
         &:hover {
             left: 10px;
             color: $primary;
-
             &:after {
                 margin-left: 3px;
             }
         }
     }
-
     &-info {
         small {
             color: $paragraph;
         }
     }
-
     .card-img-top {
         height: 173px;
         object-fit: cover;
@@ -273,16 +247,13 @@ ul.list {
         box-shadow: none;
         transition: all .25s ease-in-out;
     }
-
     &:hover {
         .card-img-top {
             box-shadow: 0px 0px 30px $primary-shadow;
         }
-
         .card-link {
             left: 10px;
             color: $primary;
-
             &:after {
                 margin-left: 3px;
             }
@@ -291,7 +262,6 @@ ul.list {
             color: $primary;
         }
     }
-
     a {
         text-decoration: none;
     }
@@ -303,12 +273,10 @@ ul.list {
             color: $primary;
         }
     }
-
     span {
         @include font-primary($w: 600, $s: 1rem, $l: 1.2rem);
     }
 }
-
 
 .owl-nav [class^="owl-"] {
     position: absolute;
@@ -332,11 +300,9 @@ ul.list {
 .testimonial-item {
     @include card-style;
     padding: 1rem;
-
     h6 {
         @include font-primary($w: 600, $s: 1rem, $l: 1.25rem);
     }
-
     p {
         @include font-primary($w: 400, $s: 0.875rem, $l: 1.5rem);
     }
@@ -353,10 +319,8 @@ ul.list {
 .breadcrumb {
     gap: .5rem;
     color: $black-text;
-
     img {
         opacity: 0.5;
-
         &:last-child {
             opacity: 1;
         }
@@ -365,7 +329,6 @@ ul.list {
 
 .breadcrumb-link {
     color: $paragraph;
-
     &:hover {
         color: $primary;
     }
@@ -384,66 +347,64 @@ input {
 }
 
 
-
 /*--Start footer--*/
+
 footer {
     .logo {
         max-height: 40px;
     }
-
     h5 {
         @include font-primary($w: 600, $s: 1rem, $l: 1.5rem);
     }
-
     a {
         text-decoration: none;
         color: $paragraph;
         transition: all .25s ease-in-out;
-
         &:hover {
             color: $primary;
         }
     }
-
-    .copyright, a, p {
+    .copyright,
+    a,
+    p {
         @include font-primary($w: 400, $s: 0.875rem, $l: 2rem);
     }
-
     .copyright {
         line-height: 1.25rem;
-
-        &, .fa, .fab {
+        &,
+        .fa,
+        .fab {
             color: $grey-light;
             transition: all .25s ease-in-out;
         }
-        .fa, .fab {
+        .fa,
+        .fab {
             &:hover {
                 color: $primary;
             }
         }
     }
 }
+
+
 /*--End footer--*/
 
 @media (min-width: 992px) {
     /*--Navbar--*/
     .header {
         min-height: 106px;
-
         .navbar-brand {
             img {
                 max-height: 40px;
             }
         }
     }
-
     .navbar {
         .nav-link {
             padding: 2.5rem 0.5rem;
             margin-left: .5rem;
             margin-right: .5rem;
         }
-
         .nav-item {
             .dropdown-menu {
                 border: 0;
@@ -455,11 +416,9 @@ footer {
                 transition: .5s;
                 opacity: 0;
                 box-shadow: 0px 0px 30px $primary-shadow;
-
                 a {
-                    color: rgba(0,0,0,.55);
+                    color: rgba(0, 0, 0, .55);
                 }
-
                 .dropdown-item {
                     &:hover {
                         background-color: transparent;
@@ -467,7 +426,6 @@ footer {
                     }
                 }
             }
-
             &:hover {
                 .dropdown-menu {
                     transform: rotateX(0deg);
@@ -479,22 +437,17 @@ footer {
         }
     }
     /*--End Navbar--*/
-
     /*--Hero Banner--*/
     .hero-header {
         padding: 4.75rem 0;
-        
         h2 {
             @include font-primary($w: 800, $s: 3rem, $l: 4rem);
         }
-
         &-content {
             max-width: 90%;
         }
     }
     /*--End Hero Banner--*/
-
-
     /*--Start Counter--*/
     .counter-item {
         h5 {
@@ -502,13 +455,11 @@ footer {
                 color: $primary;
             }
         }
-
         span {
             @include font-primary($w: 600, $s: 1.125rem, $l: 1.75rem);
         }
     }
     /*--End Counter--*/
-
     /*--Start Feadback--*/
     .testimonial-item {
         @include card-style;
@@ -519,39 +470,27 @@ footer {
         //     @include font-primary($w: 400, $s: 0.875rem, $l: 1.5rem);
         // }
     }
-
     /*--End Feadback--*/
-
     /*--Utilities--*/
     .section-heading {
         @include font-primary($w: 700, $s: 2rem, $l: 2.75rem);
-
         &-sm {
             @include font-primary($w: 700, $s: 1.5rem, $l: 2rem);
         }
     }
-
     .section-with-bg {
         background-color: $section-bg;
     }
-
     .pointer {
         cursor: pointer;
     }
-
     .mw-md-60 {
         max-width: 60%;
     }
     /*--End Utilities--*/
 }
 
-
-
-
-
 @import './category-single.scss';
-
-
 .maps {
     img {
         max-width: 100%;
@@ -563,4 +502,27 @@ footer {
 }
 
 @import './align-section.scss';
-
+.content {
+    table {
+        margin: auto;
+        thead {
+            background-color: #5EA6F8;
+            th {
+                color: #FFF;
+                font-size: 1.25rem;
+                font-weight: 600;
+                padding: 1.5rem;
+            }
+        }
+        th,
+        td {
+            border: 1px solid #C9C8C8;
+        }
+        td {
+            padding: 1rem;
+        }
+        .list {
+            margin-bottom: 0;
+        }
+    }
+}
