--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-/* # Genesis Framework
-Theme Name: Da Nang Tech
-Template: Genesis
+/*
+Theme Name:   Da Nang Tech
 Theme URI: https://danangtech.com/
 Description: This is a child version created from Genesis Framework.
 Author: DaNangTech
 Author URI: https://danangtech.com/
-Version: 0.0.1
+Template: Genesis
+Version: 1.0.0
 Tags: one-column, two-columns, three-columns, left-sidebar, right-sidebar, custom-menu, featured-images, full-width-template, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready, accessibility-ready
 License: GPL-2.0-or-later
 License URI: https://www.gnu.org/licenses/old-licenses/gpl-2.0.html
